src/objects/Recall__c.object
<CustomObject>
    <description>Podracer recall information</description>
    <fields>
        <fullName>Date__c</fullName>
        <description>Recall announcement date</description>
        <inlineHelpText>Recall announcement date</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expires__c</fullName>
        <description>Recall expiration date</description>
        <inlineHelpText>Recall expiration date</inlineHelpText>
        <label>Expires</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Podracer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Podracer recall was issued for</description>
        <inlineHelpText>Podracer recall was issued for</inlineHelpText>
        <label>Podracer</label>
        <referenceTo>Podracer__c</referenceTo>
        <relationshipLabel>Recalls</relationshipLabel>
        <relationshipName>Recalls</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Recall</label>
    <nameField>
        <label>Recall description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recalls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>